# sls_webgpu_demo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  build_shaders.ps1  lerna.json  package.json  rustfmt.toml  turbo.json
.cargo/: config.toml
crates/game/: .parcelrc  Cargo.toml  package.json  tsconfig.json  webpack.config.js
crates/game/src/: game.rs  lib.rs  wasm_ffi.rs
crates/game/static/: index.html
crates/sls-gl-backend/: Cargo.toml
crates/sls-webgpu/: Cargo.toml  build.rs
crates/sls-webgpu-game/: Cargo.toml
crates/sls-webgpu-game/js/: index.js
crates/sls-webgpu-game/src/: lib.rs  wasm_ffi.rs
crates/sls-webgpu-html5/: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
crates/sls-webgpu-html5/js/: env-shim.js  index.js  polyfill.js  ui.js  wgpu.js
crates/sls-webgpu-html5/scripts/: wasm-build.mjs
crates/sls-webgpu-html5/src/: app.rs  ffi.rs  lib.rs  options.rs  platform.rs  wgpu_app.rs
crates/sls-webgpu-html5/static/: index.html
crates/sls-webgpu-html5/tests/: app.rs
crates/sls-webgpu-ios/: Cargo.toml  Makefile  build.rs  cbindgen.toml
crates/sls-webgpu-ios/ios-src/: .gitignore  AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  main.m
crates/sls-webgpu-ios/ios-src/sls-webgpu/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift  install-sdl2.sh  rust-bindings.h
crates/sls-webgpu-ios/ios-src/sls-webgpu.xcodeproj/: project.pbxproj
crates/sls-webgpu-ios/ios-src/sls-webgpu.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crates/sls-webgpu-ios/ios-src/sls-webgpu.xcodeproj/project.xcworkspace/xcuserdata/Shea.xcuserdatad/: UserInterfaceState.xcuserstate
crates/sls-webgpu-ios/ios-src/sls-webgpu.xcodeproj/xcuserdata/Shea.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
crates/sls-webgpu-ios/ios-src/sls-webgpu.xcodeproj/xcuserdata/Shea.xcuserdatad/xcschemes/: xcschememanagement.plist
crates/sls-webgpu-ios/ios-src/sls-webgpuTests/: sls_webgpuTests.swift
crates/sls-webgpu-ios/sls-webgpu-ios.xcodeproj/: project.pbxproj
crates/sls-webgpu-ios/sls-webgpu-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crates/sls-webgpu-ios/sls-webgpu-iosTests/: sls_webgpu_iosTests.m
crates/sls-webgpu-ios/sls_webgpu_ios/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift  bridgedheader.h  sls_webgpu_rs.h
crates/sls-webgpu-ios/sls_webgpu_ios.xcodeproj/: project.pbxproj
crates/sls-webgpu-ios/sls_webgpu_ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crates/sls-webgpu-ios/sls_webgpu_ios.xcodeproj/project.xcworkspace/xcuserdata/Shea.xcuserdatad/: UserInterfaceState.xcuserstate
crates/sls-webgpu-ios/sls_webgpu_ios.xcodeproj/xcuserdata/Shea.xcuserdatad/xcschemes/: xcschememanagement.plist
crates/sls-webgpu-ios/sls_webgpu_iosTests/: sls_webgpu_iosTests.swift
crates/sls-webgpu-ios/src/: lib.rs
crates/sls-webgpu-native/: Cargo.toml  imgui.ini  renderdoc.cap
crates/sls-webgpu-native/src/: app.rs  main.rs  traits.rs
crates/sls-webgpu/src/: camera.rs  error.rs  util.rs  window.rs
crates/sls-webgpu/src/game/: input.rs  mod.rs  resources.rs  wasm_bindings.rs
crates/sls-webgpu/src/game/asset_loading/: html5.rs
crates/sls-webgpu/src/game/systems/: main_systems_bundle.rs  renderer.rs
crates/sls-webgpu/src/gl_renderer/: gl_context.rs  mod.rs  util.rs
crates/sls-webgpu/src/platform/: gui.rs  html5.rs  mouse.rs  tests.rs
crates/sls-webgpu/src/renderer_common/: geometry.rs  gltf_loader.rs  handle.rs  images.rs  mod.rs  render_context.rs  sparse_array_allocator.rs
crates/sls-webgpu/src/scene_graph/: README.md  parent_update_system.rs  transform_system_bundle.rs
crates/sls-webgpu/src/scene_graph/components/: children.rs  parent.rs
crates/sls-webgpu/src/shaders/: debug_light.frag.spv  debug_light.vert  debug_light.vert.spv  main.frag.spv  main_gl.vert
crates/sls-webgpu/src/wgpu_renderer/: mod.rs  pipeline_state.rs  render_hooks.rs  textures.rs  uniforms.rs
crates/sls-webgpu/tests/: main.rs
crates/sls-webgpu/tests/util/: mod.rs
examples/: shader-2-wgsl.rs
scripts/: wasm-pack-watch
sls_webgpu_ios.xcworkspace/: contents.xcworkspacedata
sls_webgpu_ios.xcworkspace/xcuserdata/Shea.xcuserdatad/: UserInterfaceState.xcuserstate
src/: camera.rs  context.rs  error.rs  geometry.rs  lib.rs  math.rs  mesh.rs  tests.rs  uniforms.rs  util.rs  window.rs
src/game/: camera_systems.rs  components.rs  html5_backend.rs  input.rs  mod.rs  resources.rs  systems.rs  transform.rs  wasm_bindings.rs
src/game/asset_loading/: asset_load_message.rs  components.rs  mod.rs  native.rs  resources.rs  systems.rs
src/game/systems/: camera_systems.rs  mod.rs  model_systems.rs  runnable_ext.rs
src/gl_renderer/: gl_context.rs  mod.rs  resources.rs  shaders.rs  util.rs
src/platform/: gui.rs  html5.rs  keyboard.rs  mod.rs  mouse.rs  sdl2_backend.rs
src/renderer_common/: allocator.rs  asset_loading.rs  geometry.rs  gltf_loader.rs  handle.rs  has_uuid.rs  mod.rs  model.rs  render_context.rs  sparse_array_allocator.rs
src/scene_graph/: local_to_parent_system.rs  local_to_world_propagate_system.rs  local_to_world_system.rs  missing_previous_parent_system.rs  mod.rs
src/scene_graph/components/: local_to_parent.rs  local_to_world.rs  non_uniform_scale.rs  rotation.rs  scale.rs  translation.rs
src/shaders/: debug_light.frag  debug_light.frag.spv  debug_light.vert.spv  main.frag  main.frag.spv  main.vert  main.vert.spv  main_gl.frag  main_gl.vert
src/wgpu_renderer/: context.rs  frame.rs  geometry.rs  gltf_scene.rs  material.rs  mesh.rs  mod.rs  model.rs  model_instance.rs  pipeline_state.rs  render_context.rs  render_hooks.rs  resource_view.rs  textures.rs  uniforms.rs
tests/: main.rs  renderer_common.rs
tests/renderer_common/: gltf_loader.rs  handles.rs  main.rs  mod.rs
tests/util/: mod.rs
