[package]
name = "sls-webgpu"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
license = "MIT"
edition = "2018"

[features]
sdl2_backend = ["sdl2"]
html5_backend = ["web-sys"]
wgpu_renderer = ["wgpu"]
wgpu_imgui = ["imgui", "imgui-wgpu", "wgpu_renderer"]
opengl_renderer = ["glow"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
regex = "1.5.4"
naga = "*"

[dev-dependencies]
naga = { version = "0.5.0", features = [
    "glsl-in", "spv-in", "spv-out", "wgsl-out"] }

[dependencies]
wasm-bindgen = "0.2.45"
raw-window-handle = "0.3.3"
nalgebra-glm = "0.3"
wgpu = { version = "^0.8.1", features = ["trace"], optional = true }
log = "0.4.14"
bytemuck = { version = "1.7", features = ["derive"] }
lazy_static = "1.4.0"
downcast-rs = "1.2.0"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
imgui-wgpu = { version = "0.15.1", features = [], optional = true }
imgui = { version = "0.7.0", optional = true }
atomic_refcell = "*"
glow = { version = "*", optional = true }
smallvec = "1.6.1"
genmesh = "0.6.2"
memoffset = { version = "0.6", features = ["unstable_const"] }
image = "^0.23"
hibitset = "0.6.3"
anyhow = "^1.0"
thiserror = "^1.0"
bitflags = "^1.2"

[dependencies.gltf]
version = "0.16"
features = ["extras", "names"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "=0.3.50"
optional = true
features = [
    "Window",
    "KeyboardEvent",
    "MouseEvent",
    "MouseScrollEvent",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAdapterFeatures",
    "GpuAdapterLimits",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "GpuBufferUsage",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuColorWrite",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilState",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuErrorFilter",
    "GpuExtent3dDict",
    "GpuFeatureName",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyBuffer",
    "GpuImageCopyImageBitmap",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLoadOp",
    "GpuMapMode",
    "GpuMultisampleState",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineStatisticName",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuProgrammableStage",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuShaderStage",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuStorageTextureAccess",
    "GpuStorageTextureBindingLayout",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "GpuTextureUsage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuUncapturedErrorEvent",
    "GpuUncapturedErrorEventInit",
    "GpuValidationError",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "HtmlCanvasElement",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen", "codegen", "serialize"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen", "codegen", "serialize"] }
shaderc = "0.7"


[dependencies.sdl2]
version = "0.34.4"
optional = true
features = ["default", "raw-window-handle"]