[package]
name = "sls-webgpu"
version = "0.1.0"
authors = ["Steve Shea <stevenlsjr@gmail.com>"]
license = "MIT"
edition = "2018"
resolver = "2"

[features]
default = ["wgpu_renderer"]
sdl2_backend = ["sdl2"]
html5_backend = ["web-sys"]
wgpu_renderer = []
wgpu_imgui = ["imgui", "imgui-wgpu", "wgpu_renderer"]
opengl_renderer = ["glow"]

# optimize certain packages in dev mode
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
regex = "1.5.4"
naga = "*"

[dev-dependencies]
naga = { version = "0.5.0", features = [
    "glsl-in", "spv-in", "spv-out", "wgsl-out"] }

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
wasm-bindgen = "0.2.45"
raw-window-handle = "0.3.3"
nalgebra-glm = { version = "0.3", features = ['serde-serialize'] }
nalgebra = { version = "0.29.0", features = ['serde-serialize'] }
log = "0.4.14"
bytemuck = { version = "1.7", features = ["derive"] }
lazy_static = "1.4.0"
downcast-rs = "1.2.0"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
imgui-wgpu = { version = "0.17.0", features = [], optional = true, resolver = "2" }
imgui = { version = "0.7.0", optional = true }
atomic_refcell = "*"
glow = { version = "*", optional = true }
smallvec = "1.6.1"
genmesh = "0.6.2"
memoffset = { version = "0.6", features = ["unstable_const"] }
anyhow = "^1.0"
thiserror = "^1.0"
bitflags = "^1.2"
shrinkwraprs = "0.3.0"


[target.'cfg(target_arch = "wasm32")'.dependencies.gltf]
version = "0.16"
default-features = false
features = ["extras", "names", "utils", "image"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.gltf]
version = "0.16"
features = ["extras", "names"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "=0.3.51"
optional = true
features = [
    "DomStringMap",
    "Window",
    "KeyboardEvent",
    "MouseEvent",
    "MouseScrollEvent",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAdapterFeatures",
    "GpuAdapterLimits",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "GpuBufferUsage",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuColorWrite",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilState",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuErrorFilter",
    "GpuExtent3dDict",
    "GpuFeatureName",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyBuffer",
    "GpuImageCopyImageBitmap",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLoadOp",
    "GpuMapMode",
    "GpuMultisampleState",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineStatisticName",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuProgrammableStage",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuShaderStage",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuStorageTextureAccess",
    "GpuStorageTextureBindingLayout",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "GpuTextureUsage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuUncapturedErrorEvent",
    "GpuUncapturedErrorEventInit",
    "GpuValidationError",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "HtmlCanvasElement",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.51"
getrandom = { version = "0.2.3", features = ["js"] }
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen", "codegen", "serialize"] }
image = { version = "^0.23", default-features = false, features = ["gif", "jpeg", "png", "webp", "bmp", "hdr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.10.2"
features = ["spirv"]
default-features = false
#resolver = "2"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu]
version = "0.10.2"
features = ["spirv"]
default-features = true
#resolver = "2"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = { version = "0.4.0", default-features = true, features = ["wasm-bindgen", "codegen", "serialize"] }
shaderc = "0.7"
rayon = "1.5.1"
crossbeam = "0.8.1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.image]
version = "^0.23"
default-features = true
#features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]


[dependencies.sdl2]
version = "0.34.4"
optional = true
features = ["default", "raw-window-handle"]