[package]
name = 'sls-webgpu-game'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'rlib',
]

[features]
wasm_bindgen = [
    'wasm-bindgen-futures',
    'wee_alloc',
    'js-sys',
]

[dependencies]
console_log = '0.2.0'
log = '0.4.14'
nalgebra-glm = '*'
lazy_static = '*'

[dependencies.wasm-bindgen]
version = '0.2.45'
features = ['serde-serialize']

[dependencies.wasm-bindgen-futures]
version = '~0.4'
optional = true

[dependencies.wee_alloc]
version = '0.4.2'
optional = true

[dependencies.js-sys]
version = '=0.3.51'
optional = true

[dependencies.serde]
version = '~1.0'
features = ['derive']

[dependencies.web-sys]
optional = true
version = '=0.3.51'
features = [
    'console',
    'Window',
    'Document',
    'HtmlCanvasElement',
    'EventTarget',
    'KeyboardEvent',
    'Navigator',
    'Node',
    'NodeList',
]
[target."cfg(target_arch = \"wasm32\")".dependencies.getrandom]
version = '0.2.3'
features = ['js']

[target."cfg(target_arch = \"wasm32\")".dependencies.legion]
version = '0.4.0'
default-features = false
features = [
    'wasm-bindgen',
    'codegen',
    'serialize',
    'extended-tuple-impls',
]
[target."cfg(not(target_arch = \"wasm32\"))".dependencies.legion]
version = '0.4.0'
default-features = true
features = [
    'codegen',
    'serialize',
    'extended-tuple-impls',
]

[target."cfg(not(target_arch = \"wasm32\"))".dev-dependencies]
wasm-bindgen-test = '0.2.45'
wasm-bindgen-futures = '0.3.22'
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = '0.1.5'

[dev-dependencies]
futures = '0.1.27'
